--- a/tabs/static/css/style.css
+++ b/tabs/static/css/style.css
@@ -1,18 +1,53 @@
-
-.tabs-control {
-    text-align: right;
-}
-
 body {
     margin:0;
     padding:0;
+}
+
+.tabs-control {
+    text-align: right;
 }
 
 #map {
     position: absolute;
     top: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
+    width: 800px;
+	height: 500px;
     background-color: #333333;
+}
+
+.info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	background: rgba(255,255,255,0.8);
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+}
+.info h4 {
+	margin: 0 0 5px;
+	color: #777;
+}
+
+.legend {
+	text-align: left;
+	line-height: 18px;
+	color: #555;
+}
+.legend i {
+	width: 18px;
+	height: 18px;
+	float: left;
+	margin-right: 8px;
+	opacity: 0.7;
+}
+			
+#salinity_legend {
+	display: none;
+}
+svg, #salinity_legend > i{
+	opacity: 0.5;
+}
+#opacityslider{
+	margin: 5px 0 0 0;
 }
